bugs fixed with background colous and now working good

--- a/insta story.html
+++ b/insta story.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Instagram - Stories</title>
     <link rel="stylesheet" href="insta story.css">
+    <link rel="shortcut icon" href="instagram-stories.png" type="image/x-icon">
 </head>
 <body>
 
